infrastructure/traefik-mesh/observability-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger
  namespace: traefik-mesh
spec:
  rules:
  - host: jaeger.demo
    http:
      paths:
      - path: /
        backend:
          serviceName: jaeger-query
          servicePort: 16686
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: traefik-mesh
spec:
  rules:
    - host: grafana.demo
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000
